<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS656 Chat App</string>
    <string name="main_page_title">CS656 Chat App</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Buddy List</string>
    <string name="title_section2">Requests</string>
    <string name="title_section3">My Profile</string>
    <string name="title_section4">Add/Remove Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="enter_info">Enter your information:</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">REGISTER</string>
    <string name="go_back">Go Back</string>
    <string name="find">Find</string>
    <string name="searchFriend">Friends</string>
    <string name="enterFriend">Enter a Username to search for a friend:</string>
    <string name="Reqs">These are your Friend Requests:</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
